<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.volks.nanomusic.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_linear_layout"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discover_title"
            android:text="@string/popular_name"
            android:textSize="@dimen/app_name_size"
            android:textColor="@color/default_text_black"
            android:padding="@dimen/general_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/artwork"
            android:src="@drawable/default_artwork"
            android:layout_marginBottom="@dimen/general_padding"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/song_info_all">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/song_info_titles"
                android:layout_weight="50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist"
                    android:textColor="@color/default_text_black"
                    android:textSize="@dimen/song_info_size" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/default_text_black"
                    android:textSize="@dimen/song_info_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textColor="@color/default_text_black"
                    android:textSize="@dimen/song_info_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/song_info_provided"
                android:layout_weight="80">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_default"
                    android:id="@+id/pop_artist_here"
                    android:layout_gravity="right"
                    android:textColor="@color/default_text_black"
                    android:textSize="@dimen/song_info_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/title_default"
                    android:id="@+id/pop_title_here"
                    android:textColor="@color/default_text_black"
                    android:textSize="@dimen/song_info_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_default"
                    android:layout_gravity="right"
                    android:id="@+id/pop_genre_here"
                    android:textColor="@color/default_text_black"
                    android:textSize="@dimen/song_info_size"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contorls"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dislike"
                android:src="@drawable/not_like"
                android:layout_weight="40"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_pause"
                android:src="@drawable/play_pause"
                android:layout_weight="40"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skip"
                android:src="@drawable/skip"
                android:layout_weight="40"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/like"
                android:src="@drawable/like"
                android:layout_weight="40"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purchase_songs"
            android:text="@string/buy_now"
            android:layout_marginTop="@dimen/general_padding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pop_page_desc"
            android:text="@string/popular_activity_desc"
            android:padding="@dimen/general_padding"
            android:background="@color/spinner_bg"
            android:textColor="@color/default_text_black"/>
    </LinearLayout>
</ScrollView>
